kubernetes/02-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        # --- IMPORTANT: Update this with your AWS Account ID ---
        image: 459594646623.dkr.ecr.ap-southeast-1.amazonaws.com/skillbridge-user-service:latest
        imagePullPolicy: Always # Ensure it pulls new image
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP # Internal service
